force-app/src/objects/TR1__EducationHistory__c.object
<CustomObject>
    <fields>
        <fullName>CIS_Contact_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS Contact Application</label>
        <referenceTo>CIS_Contact_Application__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certifications_managed__c</fullName>
        <description>Copied from contacts (TR field)</description>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BEd</fullName>
                </value>
                <value>
                    <fullName>BSc</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MEd</fullName>
                </value>
                <value>
                    <fullName>MSc</fullName>
                </value>
                <value>
                    <fullName>PGCE</fullName>
                </value>
                <value>
                    <fullName>PGDE</fullName>
                </value>
                <value>
                    <fullName>EdD</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>Teacher Cert</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_picklist__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_Awarded__c</fullName>
        <label>Date Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Education_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Education ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_certifications__c</fullName>
        <label>Other certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__AcademicCreditCode__c</fullName>
        <label>Academic Credit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ClassRank__c</fullName>
        <label>Class Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <inlineHelpText>Contact Salesforce ID</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DegreeDate__c</fullName>
        <label>Degree Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DegreeName__c</fullName>
        <label>Degree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DegreeType__c</fullName>
        <label>Degree Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Degree_Major__c</fullName>
        <label>Degree Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Degree_date__c</fullName>
        <description>Convert the Degree Date from text to proper type as required by Textkernel Integration</description>
        <formula>DATE(VALUE(LEFT(TR1__DegreeDate__c, 4)), VALUE(MID(TR1__DegreeDate__c, 6, 2)), VALUE(RIGHT(TR1__DegreeDate__c, 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Degree date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__ES_DegreeType__c</fullName>
        <description>This is used to show Spanish Degree types of a candidate received from TK</description>
        <label>ES Degree Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EducationHistoryExtIDTK__c</fullName>
        <formula>TR1__SchoolName__c &amp;&apos;:&apos; &amp; TR1__DegreeType__c &amp;&apos;:&apos; &amp; TR1__EndDate__c</formula>
        <label>Education History Ext ID TK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EducationHistoryExtID__c</fullName>
        <formula>TR1__SchoolName__c &amp;&apos;:&apos; &amp; TEXT(TR1__SchoolType__c)</formula>
        <label>Education History Ext ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EducationItem__c</fullName>
        <formula>TR1__StartDate__c &amp; &apos; - &apos; &amp; TR1__EndDate__c &amp; &apos; &apos; &amp; TR1__DegreeName__c &amp;&apos;, &apos; &amp; TR1__Degree_Major__c &amp; &apos;, &apos; &amp; TR1__SchoolName__c &amp; &apos;, &apos; &amp; TR1__ES_DegreeType__c &amp; &apos;, Diploma obtained &apos; &amp; TR1__DegreeDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EducationItem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Education_Locale__c</fullName>
        <inlineHelpText>The country to which the local educational level corresponds</inlineHelpText>
        <label>Education Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <label>Brazil</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>CH</fullName>
                    <label>Switzerland</label>
                </value>
                <value>
                    <fullName>CN</fullName>
                    <label>China</label>
                </value>
                <value>
                    <fullName>CZ</fullName>
                    <label>Czechia</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>DK</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>FI</fullName>
                    <label>Finland</label>
                </value>
                <value>
                    <fullName>FR</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>GB</fullName>
                    <label>United Kingdom</label>
                </value>
                <value>
                    <fullName>HR</fullName>
                    <label>Croatia</label>
                </value>
                <value>
                    <fullName>HU</fullName>
                    <label>Hungary</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <label>Italy</label>
                </value>
                <value>
                    <fullName>JP</fullName>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>NL</fullName>
                    <label>Netherlands</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>PL</fullName>
                    <label>Poland</label>
                </value>
                <value>
                    <fullName>PT</fullName>
                    <label>Portugal</label>
                </value>
                <value>
                    <fullName>RO</fullName>
                    <label>Romania</label>
                </value>
                <value>
                    <fullName>RU</fullName>
                    <label>Russian Federation</label>
                </value>
                <value>
                    <fullName>SE</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SI</fullName>
                    <label>Slovenia</label>
                </value>
                <value>
                    <fullName>SK</fullName>
                    <label>Slovakia</label>
                </value>
                <value>
                    <fullName>TR</fullName>
                    <label>Turkiye</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>LU</fullName>
                    <label>Luxemburg</label>
                </value>
                <value>
                    <fullName>SH</fullName>
                    <isActive>false</isActive>
                    <label>Switzerland(Not use, deprecated)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EndDate__c</fullName>
        <label>Attendance End Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__End_date__c</fullName>
        <description>Convert the End Date from text to proper type as required by Textkernel Integration</description>
        <formula>DATE(VALUE(LEFT(TR1__EndDate__c, 4)), VALUE(MID(TR1__EndDate__c, 6, 2)), VALUE(RIGHT(TR1__EndDate__c, 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Institute_Location__c</fullName>
        <description>This is used to show the location of Education History record received from TK</description>
        <label>Institute Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Local_Education_Code__c</fullName>
        <inlineHelpText>A degree type per country which consists of Country Code, underscore and a number</inlineHelpText>
        <label>Local Education Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Local_Education_Level__c</fullName>
        <inlineHelpText>A degree type per country</inlineHelpText>
        <label>Local Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TR1__Education_Locale__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT_0</fullName>
                    <label>AT Unbekannt</label>
                </value>
                <value>
                    <fullName>AT_1</fullName>
                    <label>AT Volksschule</label>
                </value>
                <value>
                    <fullName>AT_10</fullName>
                    <label>AT Fachhochschule</label>
                </value>
                <value>
                    <fullName>AT_11</fullName>
                    <label>AT Akademie</label>
                </value>
                <value>
                    <fullName>AT_12</fullName>
                    <label>AT Universität</label>
                </value>
                <value>
                    <fullName>AT_13</fullName>
                    <label>AT Post-Akademische Ausbildung</label>
                </value>
                <value>
                    <fullName>AT_14</fullName>
                    <label>AT Dissertation</label>
                </value>
                <value>
                    <fullName>AT_2</fullName>
                    <label>AT Hauptschule</label>
                </value>
                <value>
                    <fullName>AT_3</fullName>
                    <label>AT AHS Unterstufe</label>
                </value>
                <value>
                    <fullName>AT_4</fullName>
                    <label>AT Lehre</label>
                </value>
                <value>
                    <fullName>AT_5</fullName>
                    <label>AT BMS</label>
                </value>
                <value>
                    <fullName>AT_6</fullName>
                    <label>AT BHS</label>
                </value>
                <value>
                    <fullName>AT_7</fullName>
                    <label>AT AHS Oberstufe</label>
                </value>
                <value>
                    <fullName>AT_8</fullName>
                    <label>AT Werkmeister- und Meisterschule</label>
                </value>
                <value>
                    <fullName>AT_9</fullName>
                    <label>AT Kolleg</label>
                </value>
                <value>
                    <fullName>BE_0</fullName>
                    <label>BE Onbekend</label>
                </value>
                <value>
                    <fullName>BE_1</fullName>
                    <label>BE Doctoraat</label>
                </value>
                <value>
                    <fullName>BE_10</fullName>
                    <label>BE Beroepssecundair onderwijs</label>
                </value>
                <value>
                    <fullName>BE_11</fullName>
                    <label>BE Technisch secundair onderwijs</label>
                </value>
                <value>
                    <fullName>BE_12</fullName>
                    <label>BE Lager onderwijs</label>
                </value>
                <value>
                    <fullName>BE_13</fullName>
                    <label>BE Andere</label>
                </value>
                <value>
                    <fullName>BE_14</fullName>
                    <label>BE Hoger beroepsonderwijs</label>
                </value>
                <value>
                    <fullName>BE_3</fullName>
                    <label>BE Master</label>
                </value>
                <value>
                    <fullName>BE_4</fullName>
                    <label>BE Bachelor/Master</label>
                </value>
                <value>
                    <fullName>BE_5</fullName>
                    <label>BE Academische/Professionele bachelor</label>
                </value>
                <value>
                    <fullName>BE_6</fullName>
                    <label>BE Academische bachelor</label>
                </value>
                <value>
                    <fullName>BE_7</fullName>
                    <label>BE Professionele bachelor</label>
                </value>
                <value>
                    <fullName>BE_8</fullName>
                    <label>BE Algemeen secundair onderwijs</label>
                </value>
                <value>
                    <fullName>BE_9</fullName>
                    <label>BE Kunstsecundair onderwijs</label>
                </value>
                <value>
                    <fullName>BR_0</fullName>
                    <label>BR Desconhecido</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Organization_Unit__c</fullName>
        <label>Organization Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SchoolName__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SchoolType__c</fullName>
        <inlineHelpText>Name of Institution</inlineHelpText>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>university</fullName>
                </value>
                <value>
                    <fullName>college</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parser</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__StartDate__c</fullName>
        <label>Attendance Start Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Start_date__c</fullName>
        <description>Convert the Start Date from text to proper type as required by Textkernel Integration</description>
        <formula>DATE(VALUE(LEFT(TR1__StartDate__c, 4)), VALUE(MID(TR1__StartDate__c, 6, 2)), VALUE(RIGHT(TR1__StartDate__c, 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Education History</label>
    <nameField>
        <displayFormat>EDH-{0000000000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>